--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,12 @@
 body {
   background-color: #f3eaff;
 }
+
+.scale-0 {
+  transform: scale(0);
+  opacity: 0;
+}
+.scale-1 {
+  transform: scale(1);
+  opacity: 1;
+}
