--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,3 +15,18 @@ body {
   transform: scale(1);
   opacity: 1;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
