--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,23 @@ body {
   background: transparent;
   border-radius: 10px;
 }
+
+.custom-pagination {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.custom-pagination .swiper-pagination-bullet {
+  width: 24px;
+  height: 6px;
+  background-color: #c4c4c4;
+  border-radius: 20%;
+  transition: all 0.3s ease;
+}
+
+.custom-pagination .swiper-pagination-bullet-active {
+  width: 192px;
+  height: 6px;
+  background-color: #9b5de5;
+  border-radius: 20px;
+}
