--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 body {
   background-color: #f3eaff;
   overflow-x: hidden;
+  cursor: none;
 }
 
 .scale-0 {
@@ -49,4 +50,44 @@ body {
   height: 6px;
   background-color: #9b5de5;
   border-radius: 20px;
+}
+
+.hover-this {
+  transition: all 0.5s ease;
+}
+
+.link {
+  display: inline-block;
+  pointer-events: none;
+  transition: transform 0.1s linear;
+}
+
+.cursor {
+  pointer-events: none;
+  position: fixed;
+  padding: 0.3rem;
+  background-color: #fff;
+  border-radius: 50%;
+  mix-blend-mode: difference;
+  transition: transform 0.3s ease-out;
+}
+.hover-input {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  width: 100%;
+  height: 1.5px;
+  background: black;
+  bottom: 0;
+  z-index: 100;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: 0.5s all ease;
+}
+
+input:hover ~ .hover-input {
+  transform: scaleX(1);
+}
+input:focus ~ .hover-input {
+  transform: scaleX(1);
 }
